# guarneri

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: tests.yml
docs/source/how_to_guides/: custom_schema.rst
src/guarneri/: __init__.py  _version.py  decorators.py  exceptions.py  helpers.py  iconfig_example.toml  instrument.py  parsers.py  registry.py
src/guarneri/tests/: test_decorators.py  test_helpers.py  test_instrument.py  test_instrument_registry.py  test_parsers.py
src/ophydregistry/: __init__.py
