[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guarneri"
version = "0.0.0"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "guarneri"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
keywords = []
dependencies = []

[project.optional-dependencies]
dev = ["black", "pytest", "flake8", "isort"]

[project.urls]
Homepage = "https://github.com/spc-group/guarneri"

[project.scripts]
# command = "guarneri.__main__:main"
